# ai_etl

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  config.yaml.example  pyproject.toml
.kiro/specs/multimodal-ai-etl/: .config.kiro  design.md  requirements.md  tasks.md
ai_etl/: __init__.py  __main__.py  config.py  lakehouse.py  media_types.py  pipeline.py  planner.py  result_keys.py
ai_etl/providers/: __init__.py  base.py  dashscope_provider.py  registry.py  zhipuai_provider.py
configs/: cat_litter_douyin.yaml  cat_litter_jd_pop.yaml  cat_litter_jd_self.yaml  cat_litter_tmall.yaml  cat_litter_tmall_chaoshi.yaml
docs/: batch-ai-function-design.md  case-study-cat-litter.html  solution.html
examples/: batch_demo.py  etl_demo.py
scripts/: check_jd_formats.py  compare_schemas.py  competitive_analysis.py  create_channel_summary.py  data_quality_check.py  fix_data_quality.py  import_excel.py  rebuild_competitor_master.py  rebuild_competitor_master_v2.py
skills/cat-litter-competitive-analysis/: SKILL.md
skills/cat-litter-competitive-analysis/references/: prompt-template.md  source-table-schemas.md
tests/: test_config.py  test_incremental_live.py  test_lakehouse_volume.py  test_media_types.py  test_pipeline_fixes.py
