[project]
name = "ai-etl"
version = "0.2.0"
description = "AI ETL: Lakehouse 读取 → LLM 批量推理 → 结果写回"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "openai>=1.0.0",
    "clickzetta-zettapark-python",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
    "pyyaml>=6.0",
]
