[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-etl"
version = "0.2.0"
description = "AI ETL: Lakehouse → LLM Batch Inference → Lakehouse"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "openai>=1.0.0",
    "clickzetta-zettapark-python",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
zhipuai = [
    "zhipuai>=2.0.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]
